css/game.css
* {
    overflow: hidden !important;
}
#progressNumbers {
    position: absolute;
    top: 70px;
    right: 0;
}
#progressNumbers .material-symbols-outlined {
    font-size: 12pt;
    margin-right: 15px;
    height: 18px;
}
#progressBar {
    position: absolute;
    bottom: 0;
    width: 100%;
    height: 5px;
    background-color: var(--light-text);
    margin-top: 10px;
}
#main {
    overflow: auto !important;
    margin: auto;
    width: 75%;
    height: 66vh;
    margin-top: 5%;
    max-height: 60vh;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    background-color: var(--dark-gray);
    border-radius: 10px;
    padding: 15px;
    padding-bottom: 0px;
}
#cont_a {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    justify-content: space-between;
}
#problem {
    max-height: 15vh;
    overflow: scroll !important;
    text-overflow: ellipsis;
    text-align: center;
}
#problem span {
    font-size: 24pt;
    color: var(--accent-1);
}
#infotext {
    margin-top: 8px;
    margin-bottom: 6px;
    font-style: italic;
    font-size: 14pt;
    color: var(--accent-1);
    text-align: center;
}

.small-text {
    font-size: 15px;
}
.op-input {
    width: 99%;
    margin: auto;
    margin-bottom: 0.5%;
    height: 45px;
    padding: 0px !important;
    font-size: 18pt;
    text-align: center;
    margin-top: 5px;
}
#answerbtn {
    width: 99%;
    margin: auto;
    margin-bottom: 0.5%;
    margin-top: 2%;
    height: 45px;
    font-size: 18pt;
}
#a_container {
    margin-top: 16px;
    height: 40vh !important;
    margin-bottom: 20px;
    overflow-y: scroll !important;
}

.option {
    display: flex;
    flex-direction: row;
    border: solid;
    border-width: 2px;
    border-color: var(--lighter-gray);
    background-color: var(--gray);
    width: 49%;
    margin-top: 2%;
    min-height: 5vh;
    max-height: 20vh;
}
.mcop-text {
    max-height: 20vh;
    overflow: scroll !important;
}
.option:hover {
    border-color: #6a6a6a;
}
.option p {
    overflow: hidden;
    text-overflow: ellipsis;
    color: var(--light-text);
    font-size: 16pt;
    padding: 1%;
    width: 90%;
}
.option .answer-symbol {
    margin-left: 5px;
    width: initial;
}
#select {
    border-color: var(--light-text);
}
#correct {
    border-color: var(--accent-1);
}
#ranking-list, #ans-ranking-list {
    width: 100%;
    min-height: 4vh;
    overflow: scroll;
}
.ranking-item {
    margin-top: 10px;
    cursor: grab;
    padding: 1%;
    border: solid;
    border-radius: 10px;
    border-width: 2px;
    border-color: var(--lighter-gray);
    background-color: var(--gray);
    text-align: center;
    display: flex;
    flex-direction: row;
    align-items: center;
}
.ranking-item:hover {
    border-color: #6a6a6a;
}
.ranking-item p {
    max-width: calc(100% - 2%);
    overflow: hidden;
    text-overflow: ellipsis;
}
#ans-ranking-list {
    margin-top: 15px;
    border-radius: 5px;
    padding: 5px 0px;
}
#ans-ranking-list .ranking-item {
    background-color: var(--light-gray);
}
#correct-input {
    margin-top: 10px;
}
#answer_info {
    margin-top: 10px;
    padding: 5px;
    border-radius: 10px;
}
/* Note: easy_marker not used */
#answer_marker, #easy_marker, #reshow_marker {
    display: none;
    cursor: pointer;
    float: right;
    color: var(--accent-1);
}
#easy_marker, #reshow_marker {
    float: left;
}
#answer_marker:hover, #easy_marker:hover, #reshow_marker:hover {
    filter: brightness(85%);
}
#answer_marker .material-symbols-outlined, #easy_marker .material-symbols-outlined, #reshow_marker .material-symbols-outlined {
    font-size: 15px;
    text-align: right;
}
.matching-terms, .matching-defs {
    width: calc(50% - 20px);
}
.matching-item {
    cursor: pointer;
    padding: 5px;
    border-radius: 10px;
    border: solid;
    border-width: 2px;
    border-color: var(--lighter-gray);
    background-color: var(--gray);
    margin-top: 10px;
    transition: 0.3s;
}
.matching-item:hover {
    background-color: var(--light-gray);
}
@media screen and (max-width: 1300px) {
    #cont_a {
        flex-direction: column;
    }
    .option {
        width: 100%;
    }    
}

